--- a/pichkunthaicv.html
+++ b/pichkunthaicv.html
@@ -68,9 +68,9 @@
         .mobile-menu {
             position: fixed;
             top: 0;
-            left: 0;
-            width: 100%;
+            right: 0; /* Align to the right */
             height: 100%;
+            width: 100vw; /* Full width potential, but controlled by transform/width */
             background-color: rgba(255, 255, 255, 0.95); /* Semi-transparent white */
             backdrop-filter: blur(8px); /* Blur effect */
             z-index: 50; /* Above everything else */
@@ -78,17 +78,26 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            transform: translateX(100%); /* Start off-screen to the right */
-            transition: transform 0.4s ease-in-out;
+            transform: translateX(100%); /* Start completely off-screen to the right */
+            transition: transform 0.4s ease-in-out, width 0.4s ease-in-out; /* Transition both transform and width */
             padding: 1rem; /* Add padding for mobile content */
             box-sizing: border-box; /* Include padding in width/height */
+            overflow-y: auto; /* Allow content to scroll if long */
         }
         body.dark .mobile-menu {
             background-color: rgba(45, 55, 72, 0.95); /* Darker semi-transparent */
         }
-        .mobile-menu.active {
-            transform: translateX(0); /* Slide in */
+        /* State for 50% open */
+        .mobile-menu.active-half {
+            transform: translateX(0); /* Bring it onto the screen from right */
+            width: 50vw; /* Occupy 50% of the viewport width */
         }
+        /* State for 100% open */
+        .mobile-menu.active-full {
+            transform: translateX(0); /* Fully on screen */
+            width: 100vw; /* Occupy 100% of the viewport width */
+        }
+
         .mobile-menu-close {
             position: absolute;
             top: 1.5rem;
@@ -539,7 +548,7 @@
             </div>
         </section>
 
-            <!-- Social Media Buttons -->
+            <!-- Social Media Buttons (Desktop) -->
  <div class="social-media-buttons flex flex-col items-center space-y-3 mb-6">
     <a href="https://www.facebook.com/taitai.789" target="_blank" class="w-full px-4 py-2 rounded-full bg-blue-700 text-white text-sm font-semibold hover:bg-blue-800 transition-colors duration-200 shadow-md text-center">
         Facebook
@@ -1004,8 +1013,10 @@
 
                     // Close mobile menu if open
                     const mobileMenu = document.getElementById('mobileMenu');
-                    if (mobileMenu && mobileMenu.classList.contains('active')) {
-                        mobileMenu.classList.remove('active');
+                    if (mobileMenu && (mobileMenu.classList.contains('active-half') || mobileMenu.classList.contains('active-full'))) {
+                        mobileMenu.classList.remove('active-half');
+                        mobileMenu.classList.remove('active-full');
+                        menuState = 0; // Reset menu state to closed
                     }
                 });
             });
@@ -1149,8 +1160,10 @@
                     wechatQrModal.classList.add('show');
                      // Close mobile menu if open
                     const mobileMenu = document.getElementById('mobileMenu');
-                    if (mobileMenu && mobileMenu.classList.contains('active')) {
-                        mobileMenu.classList.remove('active');
+                    if (mobileMenu && (mobileMenu.classList.contains('active-half') || mobileMenu.classList.contains('active-full'))) {
+                        mobileMenu.classList.remove('active-half');
+                        mobileMenu.classList.remove('active-full');
+                        menuState = 0; // Reset menu state to closed
                     }
                 });
             }
@@ -1183,18 +1196,36 @@
             const mobileMenuClose = document.getElementById('mobileMenuClose');
             const mobileNavLinks = document.querySelectorAll('.mobile-nav-list a');
 
+            let menuState = 0; // 0: closed, 1: half-open, 2: full-open
+
             if (hamburgerMenu && mobileMenu && mobileMenuClose) {
                 hamburgerMenu.addEventListener('click', () => {
-                    mobileMenu.classList.add('active');
+                    if (menuState === 0) { // Currently closed, open to half
+                        mobileMenu.classList.add('active-half');
+                        mobileMenu.classList.remove('active-full');
+                        menuState = 1;
+                    } else if (menuState === 1) { // Currently half-open, open to full
+                        mobileMenu.classList.remove('active-half');
+                        mobileMenu.classList.add('active-full');
+                        menuState = 2;
+                    } else if (menuState === 2) { // Currently full-open, close completely
+                        mobileMenu.classList.remove('active-full');
+                        mobileMenu.classList.remove('active-half');
+                        menuState = 0;
+                    }
                 });
 
                 mobileMenuClose.addEventListener('click', () => {
-                    mobileMenu.classList.remove('active');
+                    mobileMenu.classList.remove('active-half');
+                    mobileMenu.classList.remove('active-full');
+                    menuState = 0; // Always close fully
                 });
 
                 mobileNavLinks.forEach(link => {
                     link.addEventListener('click', () => {
-                        mobileMenu.classList.remove('active'); // Close menu when a link is clicked
+                        mobileMenu.classList.remove('active-half');
+                        mobileMenu.classList.remove('active-full');
+                        menuState = 0; // Close menu when a link is clicked
                     });
                 });
             }
