--- a/pichkunthaicv.html
+++ b/pichkunthaicv.html
@@ -110,7 +110,7 @@
             color: #63b3ed; /* Light blue */
         }
         .mobile-nav-list a {
-            font-size: 1.5rem;
+            font-size: 12px; /* Changed from 1.5rem to 12px as requested */
             padding: 0.75rem 1.5rem;
             display: block;
             text-align: center;
