--- a/pichkunthaicv.html
+++ b/pichkunthaicv.html
@@ -171,24 +171,24 @@
             .mobile-social-media-buttons {
                 display: flex;
                 flex-direction: column;
-                gap: 0.75rem;
-                margin-top: 2rem;
-                width: 80%; /* Adjust width for mobile */
-                max-width: 300px; /* Max width for buttons */
+                gap: 0.5rem; /* Reduced gap */
+                margin-top: 1.5rem; /* Reduced margin */
+                width: 70%; /* Adjusted width */
+                max-width: 250px; /* Max width for buttons */
             }
             .mobile-social-media-buttons a, .mobile-social-media-buttons button {
                 width: 100%;
-                padding: 0.75rem 1rem;
+                padding: 0.5rem 0.75rem; /* Reduced padding */
                 border-radius: 9999px;
-                font-size: 1rem;
+                font-size: 0.875rem; /* Smaller font size (sm) */
                 font-weight: 600;
                 text-align: center;
-                box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+                box-shadow: 0 1px 3px rgba(0,0,0,0.1); /* Smaller shadow */
                 transition: transform 0.2s ease, box-shadow 0.2s ease;
             }
             .mobile-social-media-buttons a:hover, .mobile-social-media-buttons button:hover {
-                transform: translateY(-2px);
-                box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+                transform: translateY(-1px); /* Smaller translateY */
+                box-shadow: 0 2px 5px rgba(0,0,0,0.15); /* Slightly larger shadow on hover */
             }
         }
 
