--- a/pichkunthaicv.html
+++ b/pichkunthaicv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pich Kunthai - CCTV Specialist</title>
+    <title>Pich Kunthai - CV Information</title>
     <!-- Tailwind CSS CDN for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -192,15 +192,40 @@
             }
         }
 
-        /* Hide hamburger on larger screens */
+        /* Modifications for Desktop (min-width: 769px) */
         @media (min-width: 769px) {
-            .hamburger-menu {
-                display: none;
+            /* Keep desktop sidebar visible */
+            .aside {
+                display: flex; /* Ensure sidebar remains visible */
             }
+
+            /* Make hamburger menu visible on desktop */
+            .hamburger-menu {
+                display: block; /* Show hamburger on larger screens */
+                position: fixed; /* Keep it fixed */
+                top: 1rem;
+                right: 1rem;
+                z-index: 60; /* Above mobile menu */
+                background-color: #3b82f6;
+                color: white;
+                padding: 0.5rem 0.75rem;
+                border-radius: 0.5rem;
+                cursor: pointer;
+                font-size: 1.5rem;
+                box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+            }
+            body.dark .hamburger-menu {
+                background-color: #63b3ed;
+            }
+
+            /* Allow mobile menu to be controlled by JS on desktop, not hidden by default CSS */
             .mobile-menu {
-                display: none; /* Hide mobile menu on larger screens */
+                /* No 'display: none;' here. Its visibility is handled by JS 'transform' and 'width' classes. */
+                transform: translateX(100%); /* Ensure it starts off-screen */
+                width: 100vw; /* Allow it to take full width if active-full */
             }
         }
+
 
         /* Profile image styling */
         .profile-img {
@@ -511,10 +536,10 @@
 </head>
 <body class="bg-gray-100 text-gray-900 leading-relaxed antialiased">
     <div class="flex flex-col md:flex-row min-h-screen">
-        <!-- Hamburger Menu for Mobile -->
-        <button id="hamburgerMenu" class="hamburger-menu md:hidden">☰</button>
+        <!-- Hamburger Menu for Mobile and Desktop -->
+        <button id="hamburgerMenu" class="hamburger-menu">☰</button>
 
-        <!-- Sidebar -->
+        <!-- Sidebar (Desktop Navigation) -->
         <aside class="aside aside-bg bg-white text-gray-800 border-r border-gray-200">
             <div class="flex flex-col items-center mb-8">
                 <img src="img/6.png" alt="Profile Picture" class="profile-img mb-4">
@@ -522,7 +547,7 @@
                 <p class="text-blue-600 font-semibold text-sm">CCTV & TECHNICIAN</p>
             </div>
 
-            <!-- Desktop Navigation -->
+            <!-- Desktop Navigation Links (hidden on small screens) -->
             <nav class="mb-8">
                 <ul class="aside-nav-list flex flex-col space-y-3">
                     <li><a href="#home" class="block py-2 px-4 rounded-lg hover:bg-blue-100 dark:hover:bg-blue-800 text-gray-700 dark:text-gray-300 hover:text-blue-700 dark:hover:text-blue-300 font-medium transition-colors duration-200 hover-underline-grow">HOME</a></li>
@@ -935,7 +960,7 @@
     </div>
 
     <!-- Mobile Menu Overlay -->
-    <div id="mobileMenu" class="mobile-menu md:hidden">
+    <div id="mobileMenu" class="mobile-menu">
         <button id="mobileMenuClose" class="mobile-menu-close">&times;</button>
         <nav class="my-auto">
             <ul class="mobile-nav-list flex flex-col space-y-4">
