--- a/pichkunthaicv.html
+++ b/pichkunthaicv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pich Kunthai - CV Information</title>
+    <title>Pich Kunthai - Pich Kuthai CV Resume</title>
     <!-- Tailwind CSS CDN for styling -->
     <script src="https://cdn.tailwindcss.com"></script>
 
@@ -1233,4 +1233,5 @@
     </script>
 </body>
 </html>
+
 
