--- a/pichkunthaicv.html
+++ b/pichkunthaicv.html
@@ -901,7 +901,7 @@
                             <div class="skill-bar">
                                 <div class="skill-progress" data-progress="65"></div>
                             </div>
-                            <p class="mb-1 text-sm font-medium">Chines</p>
+                            <p class="mb-1 text-sm font-medium">Chinese</p>
                             <div class="skill-bar">
                                 <div class="skill-progress" data-progress="30"></div>
                             </div>
@@ -1233,6 +1233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
