--- a/pichkunthaicv.html
+++ b/pichkunthaicv.html
@@ -541,8 +541,8 @@
                 <p>-Full Name: PICH Kunthai</p>
                 <p>-Born: 10 January 1993</p>
                 <p>-Address: St. #1. Chipu, Bavet city, Svay Reing Province, Cambodia </p>
-                <p>-Phone:(+243) 907477194</p>
-                <p>-Website: <a href="https://linkedin.com/in/johndoe-cctv" target="_blank" class="hover-underline-grow text-blue-600">linkedin.com/in/johndoe-cctv</a></p>
+                <p>-Phone: +885 90401180</p>
+                <p>-Website: <a href="https://linkedin.com/in/johndoe-cctv" target="_blank" class="hover-underline-grow text-blue-600">pichkunthai.vercel.app</a></p>
                 <p>-Email: <a href="https://mail.google.com/" class="hover-underline-grow text-blue-600">kunthaiphaiya@gmail.com</p>
                 
             </div>
@@ -569,7 +569,7 @@
             <div class="text-center text-gray-600 text-xs mt-auto">
                 <p>&copy; Copyright 2025 All rights reserved</p>
                 <p>Designed with ❤️ by Pich Kunthai</p>
-                <p>Demo Images: <a href="https://unsplash.com" target="_blank" class="hover-underline-grow text-blue-500">Unsplash.com</a></p>
+                <p>Demo Images: <a href="https://pichkunthai.vercel.app/" target="_blank" class="hover-underline-grow text-blue-500">Unsplash.com</a></p>
             </div>
             <!-- Utility Buttons (Dark Mode Toggle and PDF Download) -->
             <div class="flex flex-col items-center mt-6 space-y-3">
@@ -903,7 +903,7 @@
                             </div>
                             <p class="mb-1 text-sm font-medium">Chinese</p>
                             <div class="skill-bar">
-                                <div class="skill-progress" data-progress="30"></div>
+                                <div class="skill-progress" data-progress="20"></div>
                             </div>
                             <p class="mb-1 text-sm font-medium">France</p>
                             <div class="skill-bar">
@@ -1233,6 +1233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
