--- a/pichkunthaicv.html
+++ b/pichkunthaicv.html
@@ -628,7 +628,7 @@
                        Nine to know you! 
                     </p>
                     <button class="px-6 py-3 rounded-full text-white shadow-lg gradient-button-hover interactive-card-hover font-semibold">
-                       Big Thankls You For Spent Valuable Time Reviewing my Information.
+                       Big Thanks You For Spent Valuable Time Reviewing my Information.
                     </button>
                 </section>
 
@@ -1233,6 +1233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
