--- a/pichkunthaicv.html
+++ b/pichkunthaicv.html
@@ -651,7 +651,7 @@
                                 <h3 class="text-xl font-semibold text-gray-800">Executive & Technician in CAESARS Casino </h3>
                                 <p class="text-blue-600 font-medium">     At:  Kinshasa City ,(DRC) Congo Country.</p>
                             </div>
-                            <p class="text-gray-600 text-sm sm:text-base">Apr 2024 – Present</p>
+                            <p class="text-gray-600 text-sm sm:text-base">Apr 2024 – Oct 2025</p>
                             </div>
 
                             <div class="flex justify-between items-start mb-1">
@@ -1233,6 +1233,7 @@
     </script>
 </body>
 </html>
+
 
 
 
